--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>디자인지그 - 오래 살수록, 더 좋아지는 집</title>
     <meta name="description" content="오래 살수록, 더 좋아지는 집. 디자인지그가 만듭니다.">
 
+    <!-- Favicon -->
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="icon.svg">
+
     <!-- Open Graph (Facebook, KakaoTalk, etc.) -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.designjig.com/">
