Fix: Replace undefined logStep1 with console.log to resolve iOS ReferenceError

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -9979,7 +9979,7 @@
             let response = null;
             let responseText = ''; // For debugging
             try {
-                if (!silent) logStep1('🔄 클라우드 데이터 가져오는 중...');
+                if (!silent) console.log('🔄 클라우드 데이터 가져오는 중...');
 
                 // [DEBUG] Log request URL
                 console.log('📡 [iOS Debug] Request URL:', requestUrl);
