--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>디자인지그 통합 관리 시스템</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icon.png?v=2">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=2">
+    <link rel="icon" type="image/png" href="dj_icon_v3.png">
+    <link rel="apple-touch-icon" href="dj_icon_v3.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1d1d1f">
@@ -15560,23 +15560,36 @@
             oninput="applyMobileFilter()">
         <div style="font-size: 12px; color: #86868b; margin-bottom: 8px;">상태 필터</div>
         <div class="mobile-filter-chips" id="mobileFilterChips">
-            <div class="mobile-filter-chip active" data-status="all" onclick="setMobileStatusFilter('all')">전체</div>
-            <div class="mobile-filter-chip" data-status="consulting" onclick="setMobileStatusFilter('consulting')">상담
+            <div class="mobile-filter-chip active" data-status="construction"
+                onclick="setMobileStatusFilter('construction')">공사중</div>
+            <div class="mobile-filter-chip" data-status="contracted" onclick="setMobileStatusFilter('contracted')">계약완료
             </div>
-            <div class="mobile-filter-chip" data-status="estimate" onclick="setMobileStatusFilter('estimate')">견적</div>
-            <div class="mobile-filter-chip" data-status="onhold" onclick="setMobileStatusFilter('onhold')">보류</div>
-            <div class="mobile-filter-chip" data-status="over" onclick="setMobileStatusFilter('over')">오버</div>
-            <div class="mobile-filter-chip" data-status="competitor" onclick="setMobileStatusFilter('competitor')">경쟁
-            </div>
-            <div class="mobile-filter-chip" data-status="contracted" onclick="setMobileStatusFilter('contracted')">계약
-            </div>
-            <div class="mobile-filter-chip" data-status="construction" onclick="setMobileStatusFilter('construction')">
-                공사중</div>
-            <div class="mobile-filter-chip" data-status="completed" onclick="setMobileStatusFilter('completed')">완료
-            </div>
-            <div class="mobile-filter-chip" data-status="as_done" onclick="setMobileStatusFilter('as_done')">A/S</div>
+            <div class="mobile-filter-chip" data-status="as" onclick="setMobileStatusFilter('as')">A/S</div>
+            <div class="mobile-filter-chip" data-status="all" onclick="setMobileStatusFilter('all')">전체</div>
         </div>
     </div>
+
+    <script>
+        // 모바일 초기화: 기본 필터를 '공사중'으로 설정
+        document.addEventListener('DOMContentLoaded', () => {
+            if (window.innerWidth <= 768) {
+                // 약간의 지연 후 실행 (데이터 로드 시점 고려)
+                setTimeout(() => {
+                    if (typeof setMobileStatusFilter === 'function') {
+                        setMobileStatusFilter('construction');
+
+                        // UI상으로도 construction 칩 활성화
+                        const chips = document.querySelectorAll('.mobile-filter-chip');
+                        chips.forEach(chip => {
+                            chip.classList.toggle('active', chip.dataset.status === 'construction');
+                        });
+
+                        // Toast 알림은 굳이 안 띄워도 됨 (자동 적용이므로)
+                    }
+                }, 800);
+            }
+        });
+    </script>
 
     <!-- 모바일 메뉴 오버레이 -->
     <div class="mobile-menu-overlay" id="mobileMenuOverlay" onclick="closeMobileMenu()"></div>
